Name:          websockets-snap
Version:       0.10.0.0
Synopsis:      Snap integration for the websockets library
Description:   Snap integration for the websockets library
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Network
Build-type:    Simple
Cabal-version: >= 1.6

Extra-source-files:
  CHANGELOG

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall

  Exposed-modules:
    Network.WebSockets.Snap

  Build-depends:
    base,
    bytestring,
    io-streams,
    mtl,
    snap-core,
    snap-server,
    websockets,
    blaze-builder

Source-repository head
  Type:     git
  Location: https://github.com/jaspervdj/websockets-snap
